force-app/main/default/objects/Apttus_Approval__Reminder__c/Apttus_Approval__Reminder__c.object-meta.xml
<CustomObject>
    <description>Specifies design time information for process step and subprocess reminders.</description>
    <label>Reminder</label>
    <nameField>
        <displayFormat>REM-{000000}</displayFormat>
        <label>Reminder Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reminders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>