force-app/main/default/objects/Apttus_Approval__Reminder__c/fields/Apttus_Approval__DurationUnit__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DurationUnit__c</fullName>
    <label>Duration Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>