force-app/main/default/objects/Apttus_Approval__Reminder__c/fields/Apttus_Approval__ProcesssStepId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ProcesssStepId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Step Id</label>
    <referenceTo>Apttus_Approval__Approval_Process__c</referenceTo>
    <relationshipLabel>Reminders</relationshipLabel>
    <relationshipName>Approval_Request_Reminders</relationshipName>
    <type>Lookup</type>
</CustomField>