force-app/main/default/objects/Apttus_Approval__Reminder__c/fields/Apttus_Approval__StepSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepSequence__c</fullName>
    <label>Step Sequence</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>