force-app/main/default/objects/Apttus_Approval__Reminder__c/fields/Apttus_Approval__StepType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__StepType__c</fullName>
    <label>Step Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Step</fullName>
            </value>
            <value>
                <fullName>Subprocess</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>