force-app/main/default/objects/Apttus_Approval__Reminder__c/fields/Apttus_Approval__SubprocessRuleEntryId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SubprocessRuleEntryId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subprocess Rule Entry Id (DEPRECATED)</label>
    <referenceTo>Apttus_Approval__ApprovalRuleEntry__c</referenceTo>
    <relationshipLabel>Reminders</relationshipLabel>
    <relationshipName>Approval_Request_Reminders</relationshipName>
    <type>Lookup</type>
</CustomField>