force-app/main/default/objects/Apttus_Approval__Reminder__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Label__c</columns>
    <columns>Apttus_Approval__StepSequence__c</columns>
    <columns>Apttus_Approval__DurationValue__c</columns>
    <columns>Apttus_Approval__DurationUnit__c</columns>
    <columns>Apttus_Approval__StepType__c</columns>
    <columns>Apttus_Approval__ProcesssStepId__c</columns>
    <columns>Apttus_Approval__SubprocessRuleEntryAssigneeId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>